add Java 8 concurrent GC flags to sourceless dist launcher