@@ -1,3 +1,3 @@
 :: this script meant to be run from the ZIP distribution created with "gradle dist"
 
-java -Xmx1G -jar SLStudio-$VERSION-all.jar
+java -Xmx1G -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -jar SLStudio-$VERSION-all.jar
